--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,19 @@ header {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    visibility: hidden;
+    opacity: 0;
+}
+header.active {
+    animation: show-header 1.5s linear forwards;
+    animation-delay: 1.2s;
+}
+
+@keyframes show-header {
+    100% {
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 .logo{
@@ -63,17 +76,76 @@ nav a.active {
     display: none;
 }
 
+.bars-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw; /* Largeur pleine */
+    height: 100vh; /* Hauteur pleine */
+    display: flex;
+    
+}
+
+.bars-box .bar {
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color );
+    animation: hide-bars .5s ease-in-out both;
+    animation-delay: calc(.1s * var(--i));
+    border-color: transparent;
+}
+
+@keyframes hide-bars{
+    0% {
+        transform: translateY(0%);
+    }
+    100% {
+        transform: translateY(-100%);
+    }
+}
+
+.bars-box.active .bar {
+    animation: show-bars .5s ease-in-out both;
+    animation-delay: calc(.1s * var(--i));
+}
+
+@keyframes show-bars{
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
 section{
     position: absolute;
     width: 100%;
     height: 100%;
-    padding: 10rem 9% 2rem;
-    background: var(--bg-color);
+    padding: 8rem 9% 2rem;
+    visibility: hidden;
+    opacity: 0;
+    overflow: hidden;
+}
+section.active {
+    animation: show-content 1.5s linear forwards;
+    animation-delay: 1.6s;
+}
+
+@keyframes show-content {
+    100% {
+        visibility: visible;
+        opacity: 1;
+        overflow: auto;
+    }
 }
 .home{
     display: flex;
     align-items: center;
-    gap: 5rem;
+    gap: 10rem;
+}
+.home-detail{
+    padding-bottom: 6%;
 }
 
 .home-detail h1{
@@ -215,3 +287,476 @@ width: 85%;
 object-fit: cover;
 mix-blend-mode: lighten;
 }
+
+/*resume*/
+
+.heading{
+    font-size: 4rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.heading span{
+    color: var(--main-color);
+}
+.resume-container{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 5rem;
+}
+.resume-box h2{
+    font-size: 3rem;
+}
+.resume-box p{
+    font-size: 1rem;
+}
+.resume-box .desc{
+    margin: 1rem 0 1.5rem;
+}
+.resume-box .resume-btn {
+    width: 100%;
+    height: 3.3rem;
+    background: var(--second-bg-color);
+    border: .2rem solid var(--second-bg-color);
+    font-size: 1.6rem;
+    color: var(--white-color);
+    font-weight: 500;
+    margin-bottom: 1.6rem;
+    border-radius: .8rem;
+    cursor: pointer;
+}
+
+.resume-box .resume-btn.active {
+    border-color: var(--main-color);
+    color: var(--main-color);
+}
+
+.resume-detail {
+    display: none;
+}
+
+.resume-detail.active{
+    display: block;
+}
+
+.resume-box .heading{
+    font-size: 3rem;
+    text-align: left;
+}
+
+.resume-list {
+    display: grid;
+    grid-template-columns: 45rem;
+    gap: 1rem;
+    height: 24rem;
+    overflow: auto;
+    /*scrollbar-width :thin; 
+    scrollbar-color: var(--main-color) var(--bg-color);*/
+
+}
+.resume-list::-webkit-scrollbar{
+    width: .4rem;
+}
+.resume-list::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 1rem;
+}
+.resume-list:hover::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+}
+
+.resume-list .resume-item {
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    padding: 2rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.resume-item .year {
+    color: var(--main-color);
+}
+.resume-item h3 {
+    font-size: 1.5rem;
+}
+.resume-item .company {
+    position: relative;
+    margin-left: 2rem;
+    margin-bottom: 1.2rem;
+}
+.resume-item .company::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: .4rem;
+    background: var(--main-color);
+    border-radius: 50%;
+    margin-left: -1.9rem;
+}
+.resume-detail.skills .resume-list{
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    height: auto;
+    overflow: visible;
+}
+.resume-detail.skills .resume-item{
+    position: relative;
+    align-items: center;
+    height: auto;
+}
+.resume-detail.skills .resume-item i {
+    font-size: 5.5rem;
+    transition: .5s;
+}
+
+.resume-detail.skills .resume-item:hover i {
+    color: var(--main-color);
+}
+
+.resume-detail.about .resume-list {
+    height: auto;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+}
+
+.resume-detail.about .resume-item {
+    height: auto;
+    padding: 0 0 .5rem;
+    background: transparent;
+}
+.resume-detail.about .resume-item p {
+    color: var(--main-color);
+}
+
+.resume-detail.about .resume-item p span {
+    color: var(--white-color);
+    margin-left: 0.5rem;
+    font-size: 1.1rem;
+}
+
+
+/*portfolio*/
+
+.portfolio-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 3rem;
+}
+
+.portfolio-detail{
+    display: none;
+}
+.portfolio-detail.active{
+    display: block;
+}
+
+.portfolio-box .numb{
+    font-size: 6rem;
+    -webkit-text-stroke: .07rem var(--white-color);
+    color: transparent;
+    line-height: 1;
+}
+
+.portfolio-box h3 {
+    font-size: 3.5em;
+    margin: .5rem 0 1rem;
+}
+
+.portfolio-box p{
+    font-size: 1rem;
+}
+
+.portfolio-box .tech{
+    margin: 1rem 0;
+    color: var(--main-color);
+    border-bottom: .1rem solid var(--white-color);
+    padding-bottom: 1.5rem;
+}
+
+.portfolio-box .live-github a{
+    position: relative;
+    display: inline-flex;
+    padding: 0rem;
+    font-size: 3rem;
+    color: var(--white-color);
+    border-radius: 50px;
+    background: var(--second-bg-color);
+    transition: .5s;
+}
+.portfolio-box .live-github a:hover{
+    color: var(--main-color);
+}
+
+.portfolio-box .live-github a span {
+    position: absolute;
+    top : -60%;
+    left : 50%;
+    transform: translateX(-50%) scale(.9);
+    font-size: 0.9rem;
+    white-space: nowrap;
+    padding: .5rem 1rem;
+    border-radius: .6rem;
+    pointer-events: none;
+    background: var(--white-color);
+    color: var(--bg-color);
+    opacity: 0;
+    scale: .9;
+    transition: .2s;
+
+}
+
+.portfolio-box .live-github a:hover span {
+    top: -70%;
+    opacity: 1;
+    scale: 1;
+    /*transform: translateX(-50%) scale(1);*/
+}
+
+.portfolio-box .portfolio-carousel {
+    width: 100%;
+    height: 25rem;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+.portfolio-carousel .img-slide{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 100%;
+    gap: 2rem;
+    height: inherit;
+    transition: .5s;
+}
+
+.portfolio-carousel .img-item{
+    height: inherit;
+}
+
+.portfolio-carousel .img-item img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+
+.portfolio-box .navigation {
+    text-align: right;
+    margin-top: 1rem;
+}
+
+.portfolio-box .navigation button {
+    display: inline-flex;
+    padding: .1rem;
+    background: var(--second-bg-color);
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    font-size: 2rem;
+    color: var(--main-color);
+    cursor: pointer;
+}
+
+.portfolio-box .navigation button.disabled {
+border-color: var(--second-bg-color);
+color: var(--disabled-color);
+}
+
+.portfolio-box .navigation .arrow-right{
+    margin-left: 1.5rem;
+}
+
+/*contact*/
+
+.contact-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Deux colonnes égales */
+    gap: 2rem; /* Espace entre les colonnes */
+    align-items: start; /* Aligne les contenus au début verticalement */
+}
+
+.contact-box {
+    background: var(--second-bg-color); /* Optionnel pour différencier visuellement */
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
+
+.contact-box h2 {
+    font-size: 2.5rem;
+    color: var(--main-color);
+}
+
+.contact-box p {
+    font-size: 1.1rem;
+    margin: 1.1rem 0;
+}
+
+.contact-box .desc {
+    margin-bottom: 1rem;
+}
+
+.contact-detail {
+    display: flex;
+    align-items: center;
+}
+
+.contact-detail i {
+    display: inline-flex;
+    background: var(--disabled-color);
+    color: var(--main-color);
+    font-size: 2rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    margin-right: 1rem;
+}
+
+.detail p:first-child {
+    font-weight: bold;
+    color: var(--main-color);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form .field-box {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+form input, form textarea {
+    padding: 1rem;
+    border: 1px solid var(--main-color);
+    border-radius: 0.5rem;
+    font-size: 1rem;
+}
+
+form button.btn {
+    margin-top: 1.5rem;
+    padding: 1rem;
+    background: var(--main-color);
+    color: white;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+form button.btn:hover {
+    background: var(--second-bg-color);
+}
+
+@media screen and (max-width: 1200px){
+    html {
+        font-size: 55%;
+    }
+}
+
+@media screen and (maw-width: 992px) {
+    header {
+        padding: 1rem 2%;
+    }
+    section {
+        padding: 7rem 2% 1rem;
+    }
+}
+
+@media screen and (max-width: 810px){
+    .contact-box .field-box {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #menu-icon {
+        display: block;
+    }
+    nav{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 1rem 0;
+        background: var(--bg-color);
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+        text-align: center;
+        display: none;
+    }
+
+    nav.active {
+        display: block;
+    }
+    nav a {
+        display: block;
+        margin: 4rem 0;
+    }
+
+    .home {
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    .home-img .img-box {
+        width: 35rem;
+        height: 35rem;
+    }
+
+    .resume-container,
+    .portfolio-container,
+    .contact-container {
+        grid-template-columns: 1fr;
+    }
+    .resume-container{
+        gap: 3rem;
+    }
+    .portfolio-container .portfolio-box:first-child {
+        order: 1;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .home-img .img-box{
+        width: 30rem;
+        height: 30rem;
+    }
+}
+
+@media screen and (max-width: 450px){
+    html{
+        font-size: 50%;
+    }
+}
+
+@media screen and (max-width: 400px){
+    .home-detail,
+    .resume-box h2,
+    .resume-box .heading,
+    .resume-box .desc,
+    .home-detail p,
+    .resume-detail.about .resume-item {
+        text-align: center;
+    }
+    .home-detail p{
+        margin-right: 0%;
+    }
+
+    .home-detail .btn-sci {
+        flex-direction: column-reverse;
+    }
+    .home-detail .btn-sci .sci{
+        margin-left: 0;
+        margin-bottom: 2rem;
+    }
+    .contact-box form {
+        padding: 2.5rem 3rem 3.5rem;
+    }
+    
+    .contact-box h2 {
+        font-size: 3.5rem;
+    }
+
+}
+
